--- a/photosite/templates/about.html
+++ b/photosite/templates/about.html
@@ -5,12 +5,12 @@
 <div class="row">
   <div class="col">
   </div>
-  <div class="col text-center">
+  <div class="col text-center" ">
     <div class="mt-5 text-center">
       <p class="lead">Pavel Ivanov</p>
       <p class="lead">ivanov2161@gmail.com</p>
       <p class="lead">instagram.com/_.pavelivanov._</p>
-      <p class="lead" style="width: 50rem;">Hello my friends! This is just a small pet-project. And I hope you enjoy
+      <p class="lead">Hello my friends! This is just a small pet-project. And I hope you enjoy
         while viewing the photos.</p>
     </div>
   </div>
